2005-08-05  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\Efloat): Revert the previous change, ...
	(\commondummiesnofonts): ... instead, add the three commands here.

2005-08-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\Efloat): make \xref, \pxref, \ref no-ops.
	Report from: Aaron S. Hawley, 3 Aug 2005 19:46:40 -0400.
	(But what about all the other commands, don't we need to no-op
	everything?)

2005-07-31  Per Bothner  <per@bothner.com>

	* makeinfo/cmds.c (cm_code): For html output use lsquo and rsquot
	entities around @samp.

2005-07-10  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\texinfoversion): Update.

2005-07-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (verbatim): mention @verbatim inside
	@smallformat, now that it works.

2005-07-04  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\commondummies): Remove \unsepspaces, it's already
	  called by \normalturnoffactive.  Move \normalturnoffactive near the
	  end of the macro.

2005-07-01  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex: Remove all occurences of \normalturnoffactive or
	  \turnoffactive attached to \indexdummies or \atdummies, since they
	  are redundant; \indexdummies and \atdummies both call \commondummies,
	  which calls \normalturnoffactive, which calls \turnoffactive.
	(\indexdummies, \atdummies): Move the definitions of \definedummy* ...
	(\commondummies): ... here; they now take a control sequence as their
	  parameter; all callers fixed.
	(\indexnofonts): Fixed the definitions of \definedummy* macros.
	(\indexdummies): Define \escapechar = `\\ ...
	(\onepageout): ... thus remove it from here.
	(\macrolist): Now has the form of \definedummyword\macro1...  It also
	  gathers user-defined aliases, so there is ...
	(\addtomacrolist): ... a new macro ...
	(\macroxxx, \aliasyyy): ... caled from these two.
	(\unmacro, \unmacrodo): Adapted to the new form of \macrolist.
	(\turnoffmacros, \emptyusermacros): Removed, mere \macrolist is enough
	  now.
